--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "react": "18.1.0",
     "react-native": "0.70.1",
-    "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0"
   },
   "devDependencies": {
@@ -33,6 +32,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
+    "prettier": "^2.7.1",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
