--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "react": "18.1.0",
-    "react-native": "0.70.1"
+    "react-native": "0.70.1",
+    "react-native-screens": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -27,6 +32,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
+    "prettier": "^2.7.1",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
