--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
     "prettier": "^2.7.1",
+    "react-native-safe-area-context": "^4.3.4",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
