--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^2.7.1",
     "react-native-paper": "5.0.0-rc.6",
     "react-native-safe-area-context": "^4.3.4",
+    "react-native-vector-icons": "^9.2.0",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
