--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "eslint-config-prettier": "^8.5.0",
@@ -33,6 +34,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.72.1",
     "prettier": "^2.7.1",
+    "react-native-safe-area-context": "^4.3.4",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
