--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "react": "18.1.0",
-    "react-native": "0.70.1",
-    "react-native-screens": "^3.17.0"
+    "react-native": "0.70.3",
+    "react-native-screens": "^3.17.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
