--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-screens": "^3.17.0",
+    "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6"
   },
