--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-screens": "^3.17.0",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
